fix: create more quizez
